# social-music

./: Cargo.toml  Dockerfile  build-client.sh  build.rs
client/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js  vite.config.js.timestamp-1672338007328.mjs
client/src/: App.svelte
client/src/pages/: LandingPage.svelte  NewRoom.svelte  NotFound.svelte  Room.svelte  RoomNew.svelte  RoomPreJoin.svelte  RoomsList.svelte
client/src/pages/room/: Chat.svelte  PanelLeft.svelte  PanelRight.svelte  Player.svelte  Presences.svelte  RoomQueue.svelte  Search.svelte  UserQueue.svelte  Users.svelte  socket.js
src/: cookie.rs  db.rs  endpoint.rs  main.rs  room.rs  routes.rs  socket.rs  spotify.rs
src/db/: auth.rs  device.rs  message.rs  playing.rs  presence.rs  queue.rs  room.rs
src/spotify/: auth.rs  me.rs  play.rs  search.rs  tracks.rs  util.rs
