[package]
name = "social-music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "rt"] }
warp = "0.3"
futures-util = "0.3.25"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.0"
env_logger = "0.8.4"
sodiumoxide = "0.2.7"
base64 = "0.13.1"
redis = { version = "0.22.1", features = ["aio", "tokio-comp"] }